--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/store": "^2.0.2",
     "ant-design-vue": "^2.0.0-rc.5",
     "core-js": "^3.6.5",
     "store": "^2.0.12",
