--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design-vue/pro-layout": "^1.0.7",
     "@types/store": "^2.0.2",
     "ant-design-vue": "^2.0.0-rc.5",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "md5": "^2.3.0",
     "store": "^2.0.12",
     "vue": "^3.0.0",
+    "vue-i18n": "^8.22.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -43,6 +47,8 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "typescript": "~3.9.3"
+    "svg-sprite-loader": "^5.2.1",
+    "typescript": "~3.9.3",
+    "webpack-theme-color-replacer": "^1.3.12"
   }
 }
