--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
+    "moment": "^2.24.1",
     "store": "^2.0.12",
     "vue": "^3.0.0",
-    "vue-i18n": "^8.22.2",
+    "vue-i18n": "^9.0.0-alpha.16",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
