--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ant-design-vue/pro-layout": "^1.0.7",
+    "@ant-design-vue/pro-layout": "^3.0.0-alpha.1",
     "@types/store": "^2.0.2",
     "ant-design-vue": "^2.0.0-rc.5",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
+    "mockjs2": "^1.0.8",
     "moment": "^2.24.1",
     "store": "^2.0.12",
     "vue": "^3.0.0",
